--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 body {
      font-family: 'Arial', sans-serif;
-    background: #bdae84; /* Hellblau zu Hellgrün */
+    background: #fce390; /* Hellblau zu Hellgrün */
     height: 150vh;
     display: flex;
     justify-content: center;
